RESOLVED FIXED28289
Removing reflection on an abs. positioned image crashes
https://bugs.webkit.org/show_bug.cgi?id=28289
Summary Removing reflection on an abs. positioned image crashes
Simon Fraser (smfr)
Reported 2009-08-13 17:31:46 PDT
Created attachment 34799 [details] Testcase The attached testcase shows a crash when removing reflection from an image.
Attachments
Testcase (880 bytes, text/html)
2009-08-13 17:31 PDT, Simon Fraser (smfr)
no flags
Patch (5.26 KB, patch)
2009-08-13 17:48 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-08-13 17:32:05 PDT
Simon Fraser (smfr)
Comment 2 2009-08-13 17:48:11 PDT
Simon Fraser (smfr)
Comment 3 2009-08-13 17:53:49 PDT
Note You need to log in before you can comment on or make changes to this bug.