2009-08-13  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Fix crash when removing reflection on an absolutely-positioned image.
        https://bugs.webkit.org/show_bug.cgi?id=28289

        Make sure we clean up the reflection layer when removing the reflection,
        so that the RenderLayer tree does not contain pointers to deleted layers.

        Test: fast/reflections/reflected-img-crash.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::~RenderLayer):
        (WebCore::RenderLayer::styleChanged):
        (WebCore::RenderLayer::removeReflection):
        * rendering/RenderLayer.h:

Canonical link: https://commits.webkit.org/38861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47260 268f45cc-cd09-0410-ab3c-d52691b4dbfc